--- a/project/app/templates/hand_archive.html
+++ b/project/app/templates/hand_archive.html
@@ -15,13 +15,14 @@
     <div style="display: flex;">
         <div style="flex-grow: 1">{% include "auction.html" %}</div>
     </div>
-    <div>
+    <div id="yep-this-one-right-here">
         {# TODO -- omit this if _display_and_control wouldn't let us see the cards #}
-        {% for t in hand.get_xscript.tricks %}
+        {% for t in annotated_tricks %}
             <div class="row">
-                {% for p in t.plays %}
+                {% for p in t %}
                     <div class="col">
-                        {{ p.player.name }} (sitting {{ p.player.most_recent_seat }}) played <span style="color: {{ p.card.color }}">{{ p.card }}</span>
+                        {# BUGBUG -- plays no longer have a "player" attribute #}
+                        {{ p.name }} (sitting {{ p.seat }}) played <span style="color: {{ p.card.color }}">{{ p.card }}</span>
                         {% if p.wins_the_trick %}✨{% endif %}
                     </div>
                 {% endfor %}
