--- a/project/app/templates/hand_archive.html
+++ b/project/app/templates/hand_archive.html
@@ -15,13 +15,12 @@
     <div style="display: flex;">
         <div style="flex-grow: 1">{% include "auction.html" %}</div>
     </div>
-    <div id="yep-this-one-right-here">
+    <div>
         {# TODO -- omit this if _display_and_control wouldn't let us see the cards #}
         {% for t in annotated_tricks %}
             <div class="row">
                 {% for p in t %}
                     <div class="col">
-                        {# BUGBUG -- plays no longer have a "player" attribute #}
                         {{ p.name }} (sitting {{ p.seat }}) played <span style="color: {{ p.card.color }}">{{ p.card }}</span>
                         {% if p.wins_the_trick %}✨{% endif %}
                     </div>
