Set titles for most pages

--- a/project/app/templates/base_player_detail.html
+++ b/project/app/templates/base_player_detail.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load player_extras %}
 {% load partials %}
+{% block title %}
+    {{ player }}
+{% endblock title %}
 {% block content %}
     <div>
         {# "user.player" is whoever is logged in. "player" is the player whose details we're examining. #}
