--- a/project/app/templates/hand_archive.html
+++ b/project/app/templates/hand_archive.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    Review of {{ hand }}
+{% endblock title %}
 {% block content %}
     <div>
         <h1>Review of {{ hand }}</h1>
