--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    {{ hand }}
+{% endblock title %}
 {% block content %}
     <div>
         <div class="row">
