--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    Hands {{ page_obj.start_index }} through {{ page_obj.end_index }} of {{ total_count }}
+{% endblock title %}
 {% block content %}
     {% block hand_list %}
         <h2>Hands {{ page_obj.start_index }} through {{ page_obj.end_index }} of {{ total_count }}</h2>
