Gotta start somewhere!

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -21,6 +21,7 @@
             <a href="{% url "app:home" %}">Home</a>
             | <a href="{% url "app:lobby" %}">Lobby</a>
             | <a href="{% url "app:hand-list" %}">Hands</a>
+            | <a href="{% url "app:board-list" %}">Boards</a>
             | <a href="{% url "app:table-list" %}">Tables</a>
             | <a href="{% url "app:players" %}">Players</a>
             | <a href="{{ VERSION|gitlab_link }}">version <tt>{{ VERSION }}</tt></a>
