Template changes suggested by django_fastdev:
* Nix unused "data-*" attributes
  I should have nixed these as part of this commit

    d76b46c8eb63e36b082391fc0a851befb9bdd25c
    AuthorDate: 2024-10-03 08:58:29 -0700

    Nix most of the JS

* Don't refer to three_by_three_trick_display if it doesn't exist

* Don't refer to p.card.color if it doesn't exist

* Nix reference to apparently-unused "hand.status"

* Only fetch `user.player` if user is authenticated

* braino in title of board_archive

--- a/project/app/templates/hand_archive.html
+++ b/project/app/templates/hand_archive.html
@@ -36,7 +36,7 @@
                         <td>{{ t.number }} {{ t.seat }}</td>
                         {% for p in t.plays %}
                             <td>
-                                <span style="color: {{ p.card.color }}">{{ p.card }}
+                                <span {% if p.card.color %}style="color: {{ p.card.color }}"{% endif %}>{{ p.card }}
                                     {% if p.wins_the_trick %}✨{% endif %}
                                 </span>
                             </td>
