--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -16,7 +16,7 @@
         <link rel="icon" type="image/png" href="{% static "app/spadesuit.png" %}" />
     </head>
     <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-          data-viewer="{{ user.player }}">
+          {% if user.is_authenticated %}data-viewer="{{ user.player }}"{% endif %}>
         <div>
             <a href="{% url "app:home" %}">Home</a>
             | <a href="{% url "app:lobby" %}">Lobby</a>
