--- a/project/app/templates/board_archive.html
+++ b/project/app/templates/board_archive.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    Review of {{ hand }}
+    Review of {{ board }}
 {% endblock title %}
 {% block content %}
     <div>
