--- a/project/app/templates/four-hands.html
+++ b/project/app/templates/four-hands.html
@@ -1,9 +1,7 @@
 <div id="four-hands"
      style="border: 1px solid;
             height: 50%;
-            font-family: monospace"
-     data-table="{{ table.pk }}"
-     data-hand-status="{% if table.hand_is_complete is True %}It's all over now, Baby Blue{% endif %}">
+            font-family: monospace">
     {# North at the top as per the Bridge Writing Style Guide #}
     <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
         <div class="col"></div>
@@ -13,16 +11,20 @@
     <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
         <div class="col">{{ card_display.West.player.display_name }}: {{ card_display.West.cards }}</div>
         <div class="col">
-            <div>
-                {% for row in three_by_three_trick_display.rows %}
-                    <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
-                        {% for column in row %}
-                            <div class="col"
-                                 {% if column != " " %}style="border: 1px dotted;"{% endif %}>{{ column|safe }}</div>
-                        {% endfor %}
-                    </div>
-                {% endfor %}
-            </div>
+            {% if three_by_three_trick_display %}
+                <div>
+                    {% for row in three_by_three_trick_display.rows %}
+                        <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
+                            {% for column in row %}
+                                <div class="col"
+                                     {% if column != " " %}style="border: 1px dotted;"{% endif %}>
+                                    {{ column|safe }}
+                                </div>
+                            {% endfor %}
+                        </div>
+                    {% endfor %}
+                </div>
+            {% endif %}
         </div>
         <div class="col">{{ card_display.East.player.display_name }}: {{ card_display.East.cards }}</div>
     </div>
