--- a/project/app/templates/four-hands.html
+++ b/project/app/templates/four-hands.html
@@ -3,18 +3,18 @@
             height: 50%;
             font-family: monospace">
     {# North at the top as per the Bridge Writing Style Guide #}
-    <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
+    <div class="row">
         <div class="col"></div>
         <div class="col">{{ card_display.North.player.display_name }}: {{ card_display.North.cards }}</div>
         <div class="col"></div>
     </div>
-    <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
+    <div class="row">
         <div class="col">{{ card_display.West.player.display_name }}: {{ card_display.West.cards }}</div>
         <div class="col">
             {% if three_by_three_trick_display %}
                 <div>
                     {% for row in three_by_three_trick_display.rows %}
-                        <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
+                        <div class="row">
                             {% for column in row %}
                                 <div class="col"
                                      {% if column != " " %}style="border: 1px dotted;"{% endif %}>
@@ -28,7 +28,7 @@
         </div>
         <div class="col">{{ card_display.East.player.display_name }}: {{ card_display.East.cards }}</div>
     </div>
-    <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
+    <div class="row">
         <div class="col"></div>
         <div class="col">{{ card_display.South.player.display_name }}: {{ card_display.South.cards }}</div>
         <div class="col"></div>
