--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -83,7 +83,7 @@
             {% block content %}
             {% endblock content %}
         </div>
-        <script src="{% static 'app/bootstrap-5.3.3-dist/js/bootstrap.bundle.js' %}"></script>
+        <script src="{% static 'app/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
         <script src="{% static 'django_eventstream/eventsource.min.js' %}"></script>
         <script src="{% static 'django_eventstream/reconnecting-eventsource.js' %}"></script>
         <script src="{% static 'app/htmx.min.js' %}"></script>
