--- a/project/app/templates/auction.html
+++ b/project/app/templates/auction.html
@@ -1,33 +1,34 @@
-{% if show_auction_history %}
-    <div id="auction" style="border: 1px dotted; overflow: auto; height: 10em">
-        <table class="table">
-            <th>
+{% load fastdev %}
+{% ifexists show_auction_history %}
+<div id="auction" style="border: 1px dotted; overflow: auto; height: 10em">
+    <table class="table">
+        <th>
+            <tr>
+                <td>
+                    <i>West</i>
+                </td>
+                <td>
+                    <i>North</i>
+                </td>
+                <td>
+                    <i>East</i>
+                </td>
+                <td>
+                    <i>South</i>
+                </td>
+            </tr>
+        </th>
+        <tbody>
+            {% for row in hand.auction.fancy_HTML_display %}
                 <tr>
-                    <td>
-                        <i>West</i>
-                    </td>
-                    <td>
-                        <i>North</i>
-                    </td>
-                    <td>
-                        <i>East</i>
-                    </td>
-                    <td>
-                        <i>South</i>
-                    </td>
+                    {% for call in row %}
+                        <td>
+                            {% if call is not None %}{{ call|safe }}{% endif %}
+                        </td>
+                    {% endfor %}
                 </tr>
-            </th>
-            <tbody>
-                {% for row in hand.auction.fancy_HTML_display %}
-                    <tr>
-                        {% for call in row %}
-                            <td>
-                                {% if call is not None %}{{ call|safe }}{% endif %}
-                            </td>
-                        {% endfor %}
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-{% endif %}
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% endifexists %}
