--- a/project/app/templates/hand_archive.html
+++ b/project/app/templates/hand_archive.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load fastdev %}
 {% block title %}
     Review of {{ hand }}
 {% endblock title %}
@@ -37,7 +38,7 @@
                         {% for p in t.plays %}
                             <td>
                                 <div {% if p.wins_the_trick %}class="throb-div"{% endif %}>
-                                    <span {% if p.card.color %}style="color: {{ p.card.color }}"{% endif %}>{{ p.card }}</span>
+                                    <span {% ifexists p.card.color %}style="color: {{ p.card.color }}"{% endifexists %}>{{ p.card }}</span>
                                 </div>
                             </td>
                         {% endfor %}
