--- a/project/app/templates/signup.html
+++ b/project/app/templates/signup.html
@@ -6,7 +6,7 @@
                 {% csrf_token %}
                 {{ form }}
                 <input type="submit" value="signup">
-                <input type="hidden" name="next" value="{{ next }}">
+                <input type="hidden" name="next" value="">
             </form>
         </div>
     {% else %}
