Board: Use a new "number" field instead of the ID
since I have no control over the ID, and it's odd to see our boards numbered e.g. 1, 12, 13, 14, 20 &c

--- a/project/app/templates/board_archive.html
+++ b/project/app/templates/board_archive.html
@@ -36,4 +36,5 @@
             </tbody>
         </table>
     </div>
+    <div style="font-size: xx-small;">database ID is {{ board.pk }}</div>
 {% endblock content %}
