--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -12,9 +12,16 @@
                 <h1>Table {{ hand.table.pk }}, {{ hand }}</h1>
             </div>
         </div>
-        <h1>
-            <div id="auction-summary">Auction: {{ hand.auction.status }}</div>
-        </h1>
+        <div class="row">
+            <div class="col">
+                <h1>
+                    <div id="auction-summary">Auction: {{ hand.auction.status }}</div>
+                </h1>
+            </div>
+            <div class="col">
+                <h1>{{ hand.trick_counts_by_direction }}</h1>
+            </div>
+        </div>
     </div>
     <div class="col">{% include "four-hands.html" %}</div>
     <div>
