WIP, maybe dead end

--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -33,7 +33,7 @@
                         </a>
                     </td>
                     <td>
-                        <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.board.pk }}</a>
+                        <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.board.number }}</a>
                     </td>
                     <td>
                         <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.table.pk }}</a>
