--- a/project/app/templates/board_list.html
+++ b/project/app/templates/board_list.html
@@ -8,15 +8,17 @@
         <table class="table">
             <th>
                 <tr>
+                    <td>Tournament #</td>
                     <td>Board #</td>
                     <td>Summary</td>
                 </tr>
             </th>
             {% for board in page_obj %}
                 <tr>
+                    <td>{{ board.tournament.pk }}</td>
                     <td>{{ board.number }}</td>
                     <td>
-                        <a href="{% url 'app:board-archive' number=board.number %}">{{ board }}</a>
+                        <a href="{% url 'app:board-archive' pk=board.pk %}">{{ board }}</a>
                     </td>
                 </tr>
             {% endfor %}
