Did a little TODO

--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -6,7 +6,7 @@
     {% block hand_list %}
         <h2>
             Hands
-            {% if played_by %}played by {{ played_by }},{% endif %}
+            {% if player_name %}played by {{ player_name }},{% endif %}
             {{ page_obj.start_index }} through {{ page_obj.end_index }} of {{ total_count }}
         </h2>
         <table class="table">
