--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -28,6 +28,8 @@
                         <a href="{% url 'app:hand-archive' hand.pk %}">
                             {% if hand.is_complete %}
                                 ✔
+                            {% elif hand.is_abandoned %}
+                                ✘
                             {% else %}
                                 …
                             {% endif %}
