Fix long-standing bug: don't display calls once auction is settled
Introduced in

    438c0feff3ba5732cace3228d19124f989f7ef81
    Commit:     Eric Hanchrow <eric.hanchrow@gmail.com>
    CommitDate: 2024-11-03 15:25:36 -0800

    Mollify django-fastdev by using its "ifexists" filter

--- a/project/app/templates/auction.html
+++ b/project/app/templates/auction.html
@@ -1,34 +1,34 @@
 {% load fastdev %}
-{% ifexists show_auction_history %}
-<div id="auction" style="border: 1px dotted; overflow: auto; height: 10em">
-    <table class="table">
-        <th>
-            <tr>
-                <td>
-                    <i>West</i>
-                </td>
-                <td>
-                    <i>North</i>
-                </td>
-                <td>
-                    <i>East</i>
-                </td>
-                <td>
-                    <i>South</i>
-                </td>
-            </tr>
-        </th>
-        <tbody>
-            {% for row in hand.auction.fancy_HTML_display %}
+{% if show_auction_history %}
+    <div id="auction" style="border: 1px dotted; overflow: auto; height: 10em">
+        <table class="table">
+            <th>
                 <tr>
-                    {% for call in row %}
-                        <td>
-                            {% if call is not None %}{{ call|safe }}{% endif %}
-                        </td>
-                    {% endfor %}
+                    <td>
+                        <i>West</i>
+                    </td>
+                    <td>
+                        <i>North</i>
+                    </td>
+                    <td>
+                        <i>East</i>
+                    </td>
+                    <td>
+                        <i>South</i>
+                    </td>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
-{% endifexists %}
+            </th>
+            <tbody>
+                {% for row in hand.auction.fancy_HTML_display %}
+                    <tr>
+                        {% for call in row %}
+                            <td>
+                                {% if call is not None %}{{ call|safe }}{% endif %}
+                            </td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% endif %}
