--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -22,6 +22,7 @@
             <a href="{% url "app:home" %}">Home</a>
             | <a href="{% url "app:lobby" %}">Lobby</a>
             | <a href="{% url "app:hand-list" %}">Hands</a>
+            | <a href="{% url "app:tournament-list" %}">Tournaments</a>
             | <a href="{% url "app:board-list" %}">Boards</a>
             | <a href="{% url "app:table-list" %}">Tables</a>
             | <a href="{% url "app:players" %}">Players</a>
