Use the new "querystring" template tag

--- a/project/app/templates/board_list.html
+++ b/project/app/templates/board_list.html
@@ -23,6 +23,6 @@
                 </tr>
             {% endfor %}
         </table>
-        {% include "pagination-controls.html" with played_by="" %}
+        {% include "pagination-controls.html" %}
     {% endblock board_list %}
 {% endblock content %}
