--- a/project/app/templates/table_list.html
+++ b/project/app/templates/table_list.html
@@ -26,6 +26,6 @@
                 </tr>
             {% endfor %}
         </table>
-        {% include "pagination-controls.html" with played_by="" %}
+        {% include "pagination-controls.html" %}
     {% endblock table_list %}
 {% endblock content %}
