--- a/project/app/templates/base_player_detail.html
+++ b/project/app/templates/base_player_detail.html
@@ -25,7 +25,7 @@
                 {% endif %}
             </div>
             <div class="col">
-                <a href="{% url 'app:hand-list' %}?played_by={{ player.pk }}">Hands {{ player }} has played</a>
+                <a href="{% url 'app:hand-list' %}{% querystring played_by=player.pk %}">Hands {{ player }} has played</a>
             </div>
         </div>
     </div>
