--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -48,6 +48,6 @@
         {% endfor %}
     </tbody>
 </table>
-{% include "pagination-controls.html" with played_by="" %}
+{% include "pagination-controls.html" %}
 {% endblock player_list %}
 {% endblock content %}
