--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -71,7 +71,7 @@
 {% endblock upper-right-column %}
 {% block scripts %}
     <script>
-var handEventSource = new ReconnectingEventSource('/hand/{{ hand.pk }}/events/');
+var handEventSource = new ReconnectingEventSource('/events/hand/{{ hand.pk }}/');
 console.log("Listening for hand events on {{ hand.pk }}");
 
 handEventSource.addEventListener('message', function (e) {
